# libndi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/common/: dmx.c  dmx.h  egl.c  egl.cpp  glfw.cpp  kms.c  kms.h  ogl.c  ogl.cpp  ogl.h  yuv.c  yuv.cpp  yuv.h
examples/example-find/: CMakeLists.txt  example-find  ndi_find.cpp
examples/example-recv/: CMakeLists.txt  example-recv  ndi_recv.cpp
examples/example-recv-codec/: CMakeLists.txt  example-recv-codec  ndi_recv_codec.cpp
examples/example-recv-gl/: CMakeLists.txt  ndi_recv_gl.cpp
examples/example-recv-thread/: ndi_recv_thread.cpp
examples/example-rpi4/: CMakeLists.txt  main.c  main.cpp
include/: ndi.h
include/ndi/: codec.h  find.h  packet.h  recv.h  scramble.h
src/: codec.c  find_avahi.c  find_dnssd.c  recv.c  scramble.c
